@@ -10,6 +10,10 @@ Release date: tba
 Core and Builtins
 -----------------
 
+- Issue #26136: Upgrade the warning when a generator raises StopIteration
+  from PendingDeprecationWarning to DeprecationWarning.  Patch by Anish
+  Shah.
+
 - Issue #26204: The compiler now ignores all constant statements: bytes, str,
   int, float, complex, name constants (None, False, True), Ellipsis
   and ast.Constant; not only str and int. For example, ``1.0`` is now ignored
